--- a/hsam/hsam/.cproject
+++ b/hsam/hsam/.cproject
@@ -44,9 +44,6 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.474881979" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
 								<option id="gnu.cpp.link.option.libs.161030854" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
-									<listOptionValue builtIn="false" value="gtk-x11-2.0"/>
-									<listOptionValue builtIn="false" value="gdk-x11-2.0"/>
-									<listOptionValue builtIn="false" value="atk-1.0"/>
 									<listOptionValue builtIn="false" value="m"/>
 									<listOptionValue builtIn="false" value="gmodule-2.0"/>
 									<listOptionValue builtIn="false" value="gthread-2.0"/>
@@ -55,6 +52,7 @@
 									<listOptionValue builtIn="false" value="nice"/>
 									<listOptionValue builtIn="false" value="srtp"/>
 									<listOptionValue builtIn="false" value="boost_thread"/>
+									<listOptionValue builtIn="false" value="boost_regex"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1529660811" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -67,7 +65,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="pc/TCPEchoClient.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -145,11 +143,11 @@
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.2111223797;cdt.managedbuild.config.gnu.exe.debug.2111223797.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.320316464;cdt.managedbuild.tool.gnu.cpp.compiler.input.2121927456">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1772619254;cdt.managedbuild.config.gnu.exe.release.1772619254.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1126452871;cdt.managedbuild.tool.gnu.cpp.compiler.input.1036331561">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
-		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1772619254;cdt.managedbuild.config.gnu.exe.release.1772619254.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.593276566;cdt.managedbuild.tool.gnu.c.compiler.input.820463857">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1772619254;cdt.managedbuild.config.gnu.exe.release.1772619254.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1126452871;cdt.managedbuild.tool.gnu.cpp.compiler.input.1036331561">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
 </cproject>
