--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ server: true
 author: Lynckia
 web: http://www.lynckia.com
 twitter: lynckia
-github: ging/lynckia
+github: ging/licode
 feedburner: 
   id: lynckia
