--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 build/
-lynckia_config.js
+licode_config.js
 extras/basic_example/node_modules
 site
 extras/basic_example/public/erizo.js
