--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
     # This listens on port 80, including localhost.
     listen 80;
     listen 443 ssl;
-    server_name av-local.minervaproject.com;
+    server_name av.minervaproject.com;
     root /usr/local/etc/nginx/licode/extras/basic_example/public;
 
     access_log         /usr/local/etc/nginx/logs/nginx.access.log  main;
@@ -47,11 +47,11 @@ http {
     ssl_certificate      /usr/local/etc/nginx/ssl/picasso.crt;
     ssl_certificate_key  /usr/local/etc/nginx/ssl/picasso.key;
 
-    #ssl_session_timeout  5m;
+    ssl_session_timeout  5m;
 
-    #ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #ssl_ciphers  HIGH:!aNULL:!MD5;
-    #ssl_prefer_server_ciphers   on;
+    ssl_protocols  SSLv2 SSLv3 TLSv1;
+    ssl_ciphers  HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers   on;
 
 
     location / {
