--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,13 @@
-worker_processes  1;
+#worker_processes  1;
 # pid              logs/nginx.pid;
 
-events {
-    worker_connections  1024;
-}
+#events {
+#    worker_connections  1024;
+#}
 
-http {
-  include             mime.types;
-  default_type        application/octet-stream;
+#http {
+ # include             mime.types;
+  #default_type        application/octet-stream;
 
   log_format          main '$remote_addr - $remote_user [$time_local] "$request" '
                             '$status $body_bytes_sent "$http_referer" '
@@ -104,4 +104,4 @@ http {
       proxy_send_timeout 86400s;
     }
   }
-}
+#}
