--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,4 @@
-#worker_processes  1;
-# pid              logs/nginx.pid;
-
-#events {
-#    worker_connections  1024;
-#}
-
-#http {
- # include             mime.types;
-  #default_type        application/octet-stream;
-
-  log_format          main '$remote_addr - $remote_user [$time_local] "$request" '
-                            '$status $body_bytes_sent "$http_referer" '
-                            '"$http_user_agent" "$http_x_forwarded_for"';
+# To be included inside an http block
 
   # These will only take effect if you don't have any
   # proxy_set_header commands set in lower blocks
@@ -104,4 +91,3 @@
       proxy_send_timeout 86400s;
     }
   }
-#}
