--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ licode_config/
 licode_config.js
 extras/basic_example/node_modules
 extras/basic_example/public/erizo.js
+extras/basic_example/public/nuveServiceConfig.js
 extras/basic_example/nuve.js
 node_modules/
 site
