--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -13,8 +13,8 @@ log4j.logger.OneToManyProcessor=DEBUG
 log4j.logger.WebRtcConnection=DEBUG
 log4j.logger.SrtpChannel=ERROR
 log4j.logger.SdpInfo=INFO
-log4j.logger.NiceConnection=INFO
-log4j.logger.DtlsTransport=INFO
+log4j.logger.NiceConnection=DEBUG
+log4j.logger.DtlsTransport=DEBUG
 log4j.logger.Resender=INFO
 log4j.logger.SdesTransport=INFO
 
