--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -12,7 +12,7 @@ log4j.appender.A1.layout.ConversionPattern=%d  - %p: %c - %m%n
 log4j.logger.OneToManyProcessor=DEBUG
 log4j.logger.WebRtcConnection=DEBUG
 log4j.logger.SrtpChannel=ERROR
-log4j.logger.SdpInfo=INFO
+log4j.logger.SdpInfo=DEBUG
 log4j.logger.NiceConnection=DEBUG
 log4j.logger.DtlsTransport=DEBUG
 log4j.logger.Resender=INFO
