return recording url, call callback in new stack, add proctor to nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,10 @@
     server localhost:3001;
   }
 
+  upstream proctor-web {
+    server localhost:3900;
+  }
+
   # HTTPS server
   server {
     # Ports 80 and 443 require nginx to be started with sudo.
@@ -39,6 +43,29 @@
     ssl_ciphers  HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers   on;
 
+    location /proctor/ {
+      expires off;
+      proxy_cache_bypass 1;
+      proxy_no_cache 1;
+      try_files $uri @proctor;
+    }
+
+    location @proctor {
+      expires off;
+      proxy_cache_bypass 1;
+      proxy_no_cache 1;
+      if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+      }
+
+      proxy_pass http://proctor-web;
+    }
 
     location / {
       expires off;
