--- a/nginx.conf
+++ b/nginx.conf
@@ -63,6 +63,12 @@
         add_header 'Content-Length' 0;
         return 204;
       }
+      if ($request_method = 'POST') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+      }
 
       proxy_pass http://proctor-web;
     }
@@ -87,13 +93,6 @@
           add_header 'Content-Length' 0;
           return 204;
        }
-
-      # if ($request_method = 'POST') {
-      #    add_header 'Access-Control-Allow-Origin' '*';
-      #    add_header 'Access-Control-Allow-Credentials' 'true';
-      #    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      #    add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-      # }
 
        proxy_pass http://licode-workers;
     }
