--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "test": " ./node_modules/jasmine-node/bin/jasmine-node test/;karma start test/karma.conf.js"
   },
   "dependencies": {
-    "body-parser": "^1.0.2"
+    "body-parser": "1.0.2"
   }
 }
