--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Open Source Communication Provider",
   "devDependencies": {
-    "amqp": "^0.2.0",
+    "amqp": "~0.2.0",
     "aws-lib": "~0.3.0",
     "coffee-script": "1.4.x",
     "express": "~3.5.1",
@@ -17,10 +17,10 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-requirejs": "~0.1.0",
     "karma-script-launcher": "~0.1.0",
-    "log4js": "^0.6.20",
+    "log4js": "~0.6.20",
     "mongojs": "~0.11.1",
-    "node-getopt": "^0.2.3",
-    "socket.io": "^0.9.16",
+    "node-getopt": "~0.2.3",
+    "socket.io": "~0.9.16",
     "vows": "0.6.x",
     "winston": "~0.7.2"
   },
