Some fixes in chrome stacks

--- a/erizo_controller/log4js_configuration.json
+++ b/erizo_controller/log4js_configuration.json
@@ -12,6 +12,7 @@
   "levels": {
   	"ErizoController": "DEBUG",
   	"RPC": "INFO",
-        "ErizoJS": "INFO"
+    "ErizoJS": "DEBUG", 
+    "ErizoJSController": "DEBUG"
   }
 }
