check env variable in cmake

--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -4,7 +4,6 @@ include(ExternalProject)
 project (ERIZO_ALL)
 option (COMPILE_EXAMPLES "COMPILE_EXAMPLES" OFF)
 option (COMPILE_TEST "COMPILE_TEST" OFF)
-option (COMPILE_EXTERNAL_MODULES "COMPILE_EXTERNAL_MODULES" ON)
 
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
@@ -36,7 +35,7 @@ if(COMPILE_TEST)
 endif(COMPILE_TEST)
 
 #external
-if(COMPILE_EXTERNAL_MODULES)
+if(EXISTS "$ENV{ERIZO_EXTERNAL_MODULES}")
   ExternalProject_Add(addons
     SOURCE_DIR $ENV{ERIZO_EXTERNAL_MODULES}
     DOWNLOAD_COMMAND ""
@@ -44,4 +43,4 @@ if(COMPILE_EXTERNAL_MODULES)
     BUILD_IN_SOURCE 1
     INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../build/libdeps/build
   )
-endif(COMPILE_EXTERNAL_MODULES)
+endif()
