--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -28,6 +28,7 @@ log4j.logger.rtp.RtpVP8Fragmenter=DEBUG
 log4j.logger.rtp.RtpParser=DEBUG
 log4j.logger.rtp.RtpPacketQueue=INFO
 log4j.logger.rtp.RtcpProcessor=INFO
+log4j.logger.rtp.RtpExtensionProcessor=INFO
 
 log4j.logger.media.OneToManyTranscoder=DEBUG
 log4j.logger.media.InputProcessor=DEBUG
