--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -9,38 +9,38 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d  - %p: %c - %m%n
 
-log4j.logger.OneToManyProcessor=DEBUG
-log4j.logger.WebRtcConnection=DEBUG
-log4j.logger.SrtpChannel=ERROR
-log4j.logger.SdpInfo=INFO
-log4j.logger.NiceConnection=DEBUG
-log4j.logger.DtlsTransport=DEBUG
-log4j.logger.Resender=INFO
-log4j.logger.SdesTransport=INFO
-log4j.logger.Stats=INFO
+log4j.logger.OneToManyProcessor=WARN
+log4j.logger.WebRtcConnection=WARN
+log4j.logger.SrtpChannel=WARN
+log4j.logger.SdpInfo=WARN
+log4j.logger.NiceConnection=WARN
+log4j.logger.DtlsTransport=WARN
+log4j.logger.Resender=WARN
+log4j.logger.SdesTransport=WARN
+log4j.logger.Stats=WARN
 
-log4j.logger.dtls.DtlsSocket=INFO
-log4j.logger.dtls.DtlsFactory=INFO
-log4j.logger.dtls.SSL=ERROR
-log4j.logger.dtls.DtlsSocketContext=INFO
+log4j.logger.dtls.DtlsSocket=WARN
+log4j.logger.dtls.DtlsFactory=WARN
+log4j.logger.dtls.SSL=WARN
+log4j.logger.dtls.DtlsSocketContext=WARN
 
-log4j.logger.rtp.RtpVP8Fragmenter=DEBUG
-log4j.logger.rtp.RtpParser=DEBUG
-log4j.logger.rtp.RtpPacketQueue=INFO
-log4j.logger.rtp.RtcpAggregator=INFO
-log4j.logger.rtp.RtcpForwarder=INFO
-log4j.logger.rtp.RtpExtensionProcessor=INFO
+log4j.logger.rtp.RtpVP8Fragmenter=WARN
+log4j.logger.rtp.RtpParser=WARN
+log4j.logger.rtp.RtpPacketQueue=WARN
+log4j.logger.rtp.RtcpAggregator=WARN
+log4j.logger.rtp.RtcpForwarder=WARN
+log4j.logger.rtp.RtpExtensionProcessor=WARN
 
-log4j.logger.media.OneToManyTranscoder=DEBUG
-log4j.logger.media.InputProcessor=DEBUG
-log4j.logger.media.OutputProcessor=DEBUG
-log4j.logger.media.ExternalInput=DEBUG
-log4j.logger.media.ExternalOutput=DEBUG
+log4j.logger.media.OneToManyTranscoder=WARN
+log4j.logger.media.InputProcessor=WARN
+log4j.logger.media.OutputProcessor=WARN
+log4j.logger.media.ExternalInput=WARN
+log4j.logger.media.ExternalOutput=WARN
 
-log4j.logger.media.mixers.VideoUtils=DEBUG
-log4j.logger.media.mixers.VideoMixer=DEBUG
+log4j.logger.media.mixers.VideoUtils=WARN
+log4j.logger.media.mixers.VideoMixer=WARN
 
-log4j.logger.media.codecs.VideoEncoder=DEBUG
-log4j.logger.media.codecs.VideoDecoder=DEBUG
-log4j.logger.media.codecs.AudioEncoder=DEBUG
-log4j.logger.media.codecs.AudioDecoder=DEBUG
+log4j.logger.media.codecs.VideoEncoder=WARN
+log4j.logger.media.codecs.VideoDecoder=WARN
+log4j.logger.media.codecs.AudioEncoder=WARN
+log4j.logger.media.codecs.AudioDecoder=WARN
