Log levels fixes

--- a/erizo_controller/log4js_configuration.json
+++ b/erizo_controller/log4js_configuration.json
@@ -10,9 +10,15 @@
     }
   ],
   "levels": {
+  	"AMQPER": "ERROR",
   	"ErizoController": "DEBUG",
-  	"AMQPER": "INFO",
-    "ErizoJS": "DEBUG", 
-    "ErizoJSController": "DEBUG"
+    "ErizoJS": "INFO", 
+    "ErizoJSController": "INFO",
+    "ErizoAgent": "INFO",
+    "ErizoAgentReporter": "ERROR",
+    "Ecch": "INFO",
+    "ErizoJS" : "DEBUG",
+    "RoomController": "DEBUG",
+    "RPCPublic":"ERROR"
   }
 }
