--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -25,6 +25,7 @@ log4j.logger.dtls.SSL=WARN
 
 log4j.logger.media.ExternalInput=WARN
 log4j.logger.media.ExternalOutput=WARN
+log4j.logger.media.SyncUtils=WARN
 log4j.logger.media.InputProcessor=WARN
 log4j.logger.media.OneToManyTranscoder=WARN
 log4j.logger.media.OutputProcessor=WARN
