eliminate error frame or height&width not set of vpx frame

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -30,7 +30,7 @@ log4j.logger.media.OneToManyTranscoder=DEBUG
 log4j.logger.media.OutputProcessor=DEBUG
 
 
-log4j.logger.media.codecs.VideoEncoder=INFO
+log4j.logger.media.codecs.VideoEncoder=DEBUG
 log4j.logger.media.codecs.VideoDecoder=INFO
 log4j.logger.media.codecs.AudioEncoder=INFO
 log4j.logger.media.codecs.AudioDecoder=INFO
