More result checks during intallation

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ node_js:
   - 0.10
 install:
   - ./scripts/installTravisDeps.sh
-script:
-  - ./scripts/installErizo.sh
-  - ./scripts/installNuve.sh
+script: ./scripts/installErizo.sh && ./scripts/installNuve.sh
 cache:
   apt: true
   directories:
