--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,24 @@
 language: node_js
 node_js:
   - 0.10
+addons:
+  apt:
+    packages:
+      - make
+      - gcc
+      - libssl-dev
+      - cmake
+      - libsrtp0-dev
+      - libsrtp0
+      - libnice10
+      -  libnice-dev
+      - libglib2.0-dev
+      - pkg-config
+      - libboost-regex-dev
+      - libboost-thread-dev
+      - libboost-system-dev
+      - liblog4cxx10-dev
+      - curl
 install:
   - ./scripts/installTravisDeps.sh
 script: ./scripts/installErizo.sh && ./scripts/installNuve.sh
