--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ addons:
       - libboost-system-dev
       - liblog4cxx10-dev
       - curl
+      - yasm
+      - libvpx
+      - libx264
 install:
   - ./scripts/installTravisDeps.sh
 script: ./scripts/installErizo.sh && ./scripts/installNuve.sh
