--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+os:
+  - osx
+  - linux
 node_js:
   - 0.10
 services:
@@ -25,6 +28,7 @@ addons:
       - yasm
       - libvpx.
       - libx264.
-install:
-  - ./scripts/installTravisDeps.sh
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   ./scripts/installMacDeps.sh;    fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; ./scripts/installTravisDeps.sh; fi
 script: ./scripts/installErizo.sh && ./scripts/installNuve.sh
