--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ addons:
       - libx264.
 before_install:
   # OSX
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then   ./scripts/installMacDeps.sh --unattended;    fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then   ./scripts/installMacDeps.sh --unattended --disable-services;    fi
 
   # LINUX
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ./scripts/installTravisDeps.sh; fi
