Added third-party libs to cmake

--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 project (ERIZO_ALL)
 option (COMPILE_EXAMPLES "COMPILE_EXAMPLES" OFF)
+include(ExternalProject)
 
 set(ERIZO_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
 
@@ -24,9 +25,8 @@ add_custom_target(lint
     COMMENT "Executing lint"
 )
 
-#global variable
-set(THIRD_PARTY_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/../../build/libdeps/build/include/")
-set(THIRD_PARTY_LIB "${CMAKE_CURRENT_SOURCE_DIR}/../../build/libdeps/build/lib/")
+#third_party
+include("third_party.cmake")
 
 #erizo
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/erizo")
