Avoid looking for Srtp

--- a/erizo/src/erizo/CMakeLists.txt
+++ b/erizo/src/erizo/CMakeLists.txt
@@ -42,8 +42,11 @@ find_library(GTHREAD gthread-2.0 HINTS "${THIRD_PARTY_LIB}")
 test_lib(${GTHREAD})
 
 # SRTP
-find_library(SRTP srtp HINTS "${THIRD_PARTY_LIB}")
 test_lib(${SRTP})
+
+# SSL
+test_lib(${SSL})
+test_lib(${CRYPTO})
 
 # NICE
 find_library(NICE nice HINTS "${THIRD_PARTY_LIB}")
