lots of new stuff

--- a/erizo/src/erizo/CMakeLists.txt
+++ b/erizo/src/erizo/CMakeLists.txt
@@ -19,43 +19,27 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fno-stack-protector")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
-include_directories("${ERIZO_SOURCE_DIR}" "${THIRD_PARTY_INCLUDE}")
+include_directories("${ERIZO_SOURCE_DIR}" "${THIRD_PARTY_INCLUDE}" /usr/local/include)
+link_directories(${THIRD_PARTY_INCLUDE})
+link_directories(/usr/local/lib)
 
 file(GLOB_RECURSE ERIZO_SOURCES "${ERIZO_SOURCE_DIR}/*.h" "${ERIZO_SOURCE_DIR}/*.c" "${ERIZO_SOURCE_DIR}/*.cpp" "${ERIZO_SOURCE_DIR}/*.cc")
 
-add_library(erizo SHARED ${ERIZO_SOURCES})
+add_library(erizo STATIC ${ERIZO_SOURCES})
 
-add_dependencies(erizo ssl srtp nice libav)
+add_dependencies(erizo buildopenssl buildsrtp buildnice buildlibav)
 
 # GLIB
 find_package(Glib REQUIRED)
 include_directories(${GLIB_INCLUDE_DIRS})
-target_link_libraries(erizo ${GLIB_LIBRARIES})
 
 # BOOST
 set (BOOST_LIBS thread regex system)
 find_package(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
-target_link_libraries(erizo ${Boost_LIBRARIES})
 
 # GTHREAD
 find_library(GTHREAD gthread-2.0 HINTS "${THIRD_PARTY_LIB}")
 test_lib(${GTHREAD})
-
-# SRTP
-test_lib(${SRTP})
-
-# SSL
-test_lib(${SSL})
-test_lib(${CRYPTO})
-
-# NICE
-test_lib(${NICE})
-
-# Libav
-test_lib(${AVUTIL})
-test_lib(${AVCODEC})
-test_lib(${AVFORMAT})
-set (AVLIBS ${AVUTIL} ${AVCODEC} ${AVFORMAT})
 
 # LOG4CXX
 find_library(LOG log4cxx)
@@ -63,4 +47,8 @@ test_lib(${LOG})
 
 message("Libs ${SRTP} ${NICE} ${GTHREAD} ${SSL} ${CRYPTO} ${AVLIBS} ${LOG}")
 
-target_link_libraries(erizo ${SRTP} ${NICE} ${GTHREAD} ${SSL} ${CRYPTO} ${AVLIBS} ${LOG})
+target_link_libraries(erizo ${Boost_LIBRARIES} ${GTHREAD} ${LOG} ${GLIB_LIBRARIES} nice srtp ssl crypto avutil avcodec avformat)
+add_custom_command(TARGET erizo POST_BUILD
+    COMMAND /usr/bin/libtool -static -o liberizo.a
+    liberizo.a ${NICE} ${SRTP} ${AVCODEC} ${AVUTIL} ${AVFORMAT}
+)
