--- a/erizo/src/test/CMakeLists.txt
+++ b/erizo/src/test/CMakeLists.txt
@@ -15,16 +15,16 @@ file(GLOB_RECURSE ERIZO_TEST_SDPS ${ERIZO_TEST_SOURCE_DIR}/*.sdp)
 file(COPY ${ERIZO_TEST_SDPS} DESTINATION ${ERIZO_TEST_BINARY_DIR})
 file(COPY ${ERIZO_TEST_SOURCE_DIR}/log4cxx.properties DESTINATION ${ERIZO_TEST_BINARY_DIR})
 file(GLOB_RECURSE ERIZO_TEST_SOURCES ${ERIZO_TEST_SOURCE_DIR}/*.cpp ${ERIZO_TEST_SOURCE_DIR}/*.h)
-add_executable(test ${ERIZO_TEST_SOURCES})
-target_link_libraries(test erizo)
+add_executable(tests ${ERIZO_TEST_SOURCES})
+target_link_libraries(tests erizo)
 
 set (BOOST_LIBS thread regex system unit_test_framework)
 find_package(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
-target_link_libraries(test ${Boost_LIBRARIES})
+target_link_libraries(tests ${Boost_LIBRARIES})
 
 file(GLOB_RECURSE ERIZO_SOURCES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 add_custom_target(check
-    test --detect_memory_leaks --report_level=detailed
+    tests --detect_memory_leaks --report_level=detailed
     WORKING_DIRECTORY "${ERIZO_TEST_BINARY_DIR}"
     COMMENT "Running tests"
 )
