--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -7,7 +7,7 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
-log4j.appender.A1.layout.ConversionPattern=%d  - %p: %c - %m%n
+log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
 log4j.logger.DtlsTransport=DEBUG
 log4j.logger.NiceConnection=DEBUG
