Port to GMock lib and added new tests

--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
+include(ExternalProject)
+
 project (ERIZO_ALL)
 option (COMPILE_EXAMPLES "COMPILE_EXAMPLES" OFF)
 
@@ -37,4 +39,14 @@ if(COMPILE_EXAMPLES)
 endif(COMPILE_EXAMPLES)
 
 #tests
+set(GMOCK_BUILD "${CMAKE_CURRENT_BINARY_DIR}/libdeps/gmock")
+
+set(GMOCK_VERSION "1.8.0")
+ExternalProject_Add(gtest
+  URL "https://github.com/google/googletest/archive/release-${GMOCK_VERSION}.tar.gz"
+  PREFIX ${GMOCK_BUILD}
+)
+
+enable_testing()
+
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test")
