--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,7 @@ before_install:
 
   # LINUX
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ./scripts/installTravisDeps.sh; fi
-install: ./scripts/installErizo.sh && ./scripts/installNuve.sh
-script: ./scripts/installErizo.sh -t
+install: ./scripts/installErizo.sh && ./scripts/installNuve.sh && npm install
+script:
+  - ./scripts/installErizo.sh -t
+  - npm run lint || true
