--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "vows": "0.6.x",
     "coffee-script": "1.4.x",
-    "winston": "~0.7.2",
-    "karma-script-launcher": "~0.1.0",
+    "jasmine-node": "~1.11.0",
+    "jshint": "^2.9.3",
+    "karma": "~0.10.2",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
     "karma-firefox-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.3",
-    "karma-requirejs": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
-    "karma": "~0.10.2",
-    "karma-chrome-launcher": "~0.1.0",
-    "jasmine-node": "~1.11.0"
+    "karma-requirejs": "~0.2.0",
+    "karma-script-launcher": "~0.1.0",
+    "vows": "0.6.x",
+    "winston": "~0.7.2"
   },
   "contributors": [
     {
@@ -34,6 +35,7 @@
     }
   ],
   "scripts": {
-    "test": " ./node_modules/jasmine-node/bin/jasmine-node test/;karma start test/karma.conf.js"
+    "test": " ./node_modules/jasmine-node/bin/jasmine-node test/;karma start test/karma.conf.js",
+    "lint": "./node_modules/jshint/bin/jshint erizo_controller/ nuve/ extras/basic_example/ spine/"
   }
 }
