Adapt ErizoClient to jshint (#562)
* Adapt ErizoClient to jshint

--- a/.jshintignore
+++ b/.jshintignore
@@ -1,2 +1,6 @@
+erizo_controller/erizoClient/lib/socket.io.js
 nuve/nuveClient/build
 nuve/nuveClient/dist
+erizo_controller/erizoClient/dist/
+erizo_controller/erizoClient/build/
+erizo_controller/erizoClient/lib/
