--- a/.jshintignore
+++ b/.jshintignore
@@ -1,6 +1,8 @@
-erizo_controller/erizoClient/lib/socket.io.js
 nuve/nuveClient/build
 nuve/nuveClient/dist
 erizo_controller/erizoClient/dist/
 erizo_controller/erizoClient/build/
 erizo_controller/erizoClient/lib/
+spine/erizofc.js
+extras/basic_example/public/erizo.js
+extras/basic_example/nuve.js
