--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ before_install:
 install: ./scripts/installErizo.sh && ./scripts/installNuve.sh && npm install
 script:
   - ./scripts/installErizo.sh -t
-  - npm run lint || true
+  - npm run lint
