--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -52,4 +52,4 @@ ExternalProject_Add(gtest
 
 enable_testing()
 
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test")
+#add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test")
