--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,4 @@ install: ./scripts/installErizo.sh && ./scripts/installNuve.sh && npm install
 script:
   - ./scripts/installErizo.sh -t
   - npm run lint
+  - npm test
