--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "devDependencies": {
     "async": "^2.1.2",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
     "jshint": "^2.9.3",
     "mocha": "^3.1.2",
+    "mock-require": "^1.3.0",
     "sinon": "^1.17.6",
     "supertest": "^2.0.0",
     "vows": "0.6.x",
