Fix scripts and modify minor things

--- a/erizo_controller/log4js_configuration.json
+++ b/erizo_controller/log4js_configuration.json
@@ -10,14 +10,14 @@
     }
   ],
   "levels": {
-  	"AMQPER": "ERROR",
-  	"ErizoController": "DEBUG",
+    "AMQPER": "ERROR",
+    "ErizoController": "INFO",
     "ErizoJS": "INFO",
     "ErizoJSController": "INFO",
     "ErizoAgent": "INFO",
     "ErizoAgentReporter": "ERROR",
     "EcCloudHandler": "INFO",
-    "RoomController": "DEBUG",
+    "RoomController": "INFO",
     "RPCPublic":"ERROR"
   }
 }
