--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "devDependencies": {
     "async": "^2.1.2",
     "chai": "^3.5.0",
+    "errorhandler": "^1.5.0",
     "jshint": "^2.9.3",
     "mocha": "^3.1.2",
     "mock-require": "^1.3.0",
+    "morgan": "^1.7.0",
     "sinon": "^1.17.6",
     "supertest": "^2.0.0",
     "vows": "0.6.x",
@@ -32,9 +34,5 @@
   "scripts": {
     "test": " ./node_modules/mocha/bin/mocha nuve/nuveAPI/test/* erizo_controller/test/*",
     "lint": "./node_modules/jshint/bin/jshint erizo_controller/ nuve/ extras/basic_example/ spine/"
-  },
-  "dependencies": {
-    "errorhandler": "^1.5.0",
-    "morgan": "^1.7.0"
   }
 }
