--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -9,14 +9,14 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
-log4j.logger.DtlsTransport=DEBUG
-log4j.logger.NiceConnection=DEBUG
+log4j.logger.DtlsTransport=WARN
+log4j.logger.NiceConnection=WARN
 log4j.logger.OneToManyProcessor=WARN
 log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
 log4j.logger.SrtpChannel=WARN
 log4j.logger.Stats=WARN
-log4j.logger.WebRtcConnection=DEBUG
+log4j.logger.WebRtcConnection=WARN
 
 log4j.logger.dtls.DtlsSocket=WARN
 log4j.logger.dtls.DtlsFactory=WARN
@@ -43,6 +43,7 @@ log4j.logger.rtp.RtcpForwarder=WARN
 log4j.logger.rtp.RtpExtensionProcessor=WARN
 log4j.logger.rtp.RtpParser=WARN
 log4j.logger.rtp.RtpPacketQueue=WARN
+log4j.logger.rtp.RtpRetransmissionHandler=WARN
 log4j.logger.rtp.RtpVP8Fragmenter=WARN
 log4j.logger.rtp.RtpVP8Parser=ERROR
 log4j.logger.rtp.RtpSink=WARN
