--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -46,5 +46,6 @@ log4j.logger.rtp.RtpPacketQueue=WARN
 log4j.logger.rtp.RtpRetransmissionHandler=WARN
 log4j.logger.rtp.RtpVP8Fragmenter=WARN
 log4j.logger.rtp.RtpVP8Parser=ERROR
+log4j.logger.rtp.RtpVP8SlideShowHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
