Add/mute stream (#644)
Implemented audio mute

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -47,5 +47,6 @@ log4j.logger.rtp.RtpRetransmissionHandler=WARN
 log4j.logger.rtp.RtpVP8Fragmenter=WARN
 log4j.logger.rtp.RtpVP8Parser=ERROR
 log4j.logger.rtp.RtpVP8SlideShowHandler=WARN
+log4j.logger.rtp.RtpAudioMuteHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
