--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -44,6 +44,7 @@ log4j.logger.rtp.RtpExtensionProcessor=WARN
 log4j.logger.rtp.RtpParser=WARN
 log4j.logger.rtp.RtpPacketQueue=WARN
 log4j.logger.rtp.RtpRetransmissionHandler=WARN
+log4j.logger.rtp.BandwidthEstimationHandler=WARN
 log4j.logger.rtp.RtpVP8Fragmenter=WARN
 log4j.logger.rtp.RtpVP8Parser=ERROR
 log4j.logger.rtp.RtpVP8SlideShowHandler=WARN
