--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -15,7 +15,7 @@ log4j.logger.OneToManyProcessor=WARN
 log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
 log4j.logger.SrtpChannel=WARN
-log4j.logger.Stats=DEBUG
+log4j.logger.Stats=WARN
 log4j.logger.WebRtcConnection=DEBUG
 
 log4j.logger.dtls.DtlsSocket=WARN
@@ -40,7 +40,7 @@ log4j.logger.media.mixers.VideoUtils=WARN
 
 log4j.logger.rtp.RtcpAggregator=WARN
 log4j.logger.rtp.RtcpForwarder=WARN
-log4j.logger.rtp.RtpExtensionProcessor=DEBUG
+log4j.logger.rtp.RtpExtensionProcessor=WARN
 log4j.logger.rtp.RtpParser=WARN
 log4j.logger.rtp.RtpPacketQueue=WARN
 log4j.logger.rtp.RtpRetransmissionHandler=WARN
