--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -48,6 +48,7 @@ log4j.logger.rtp.RtpVP8Fragmenter=ERROR
 log4j.logger.rtp.RtpVP8Parser=ERROR
 log4j.logger.rtp.RtpVP8SlideShowHandler=ERROR
 log4j.logger.rtp.RtpAudioMuteHandler=ERROR
-log4j.logger.rtp.RRGenerationHandler=ERROR
 log4j.logger.rtp.RtpSink=ERROR
 log4j.logger.rtp.RtpSource=ERROR
+log4j.logger.rtp.RRGenerationHandler=ERROR
+log4j.logger.rtp.SRPacketHandler=ERROR
