--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -51,3 +51,4 @@ log4j.logger.rtp.RtpAudioMuteHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
 log4j.logger.rtp.RRGenerationHandler=WARN
+log4j.logger.rtp.SRPacketHandler=WARN
