--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -52,3 +52,4 @@ log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
 log4j.logger.rtp.RRGenerationHandler=WARN
 log4j.logger.rtp.SRPacketHandler=WARN
+log4j.logger.rtp.SenderBandwidthEstimationHandler=WARN
