Added listeners + UTs

--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -52,3 +52,4 @@ log4j.logger.rtp.RtpSink=ERROR
 log4j.logger.rtp.RtpSource=ERROR
 log4j.logger.rtp.RRGenerationHandler=ERROR
 log4j.logger.rtp.SRPacketHandler=ERROR
+log4j.logger.rtp.SenderBandwidthEstimationHandler=ERROR
