--- a/extras/docker/Dockerfile
+++ b/extras/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:14.04
+FROM ubuntu:16.04
 
 MAINTAINER Lynckia
 
@@ -6,7 +6,7 @@ WORKDIR /opt
 
 # Download latest version of the code and install dependencies
 RUN  apt-get update && apt-get install -y git wget && \
-  git clone https://github.com/ging/licode.git
+  git clone https://github.com/fanchuanster/licode.git
 
 WORKDIR /opt/licode
 
