Added StatsCalculator to log properties

--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -53,3 +53,4 @@ log4j.logger.rtp.RtpSource=ERROR
 log4j.logger.rtp.RRGenerationHandler=ERROR
 log4j.logger.rtp.SRPacketHandler=ERROR
 log4j.logger.rtp.SenderBandwidthEstimationHandler=ERROR
+log4j.logger.rtp.StatsCalculator=ERROR
