Corrected error level

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -53,4 +53,4 @@ log4j.logger.rtp.RtpSource=WARN
 log4j.logger.rtp.RRGenerationHandler=WARN
 log4j.logger.rtp.SRPacketHandler=WARN
 log4j.logger.rtp.SenderBandwidthEstimationHandler=WARN
-log4j.logger.rtp.StatsCalculator=ERROR
+log4j.logger.rtp.StatsCalculator=WARN
