--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
-site_name: Licode Documentation
+site_name: Documentation
 site_url: http://licode.readthedocs.org
 repo_url: https://github.com/lynckia/licode
 site_description: Open Source WebRTC Communications Platform
 docs_dir: doc
-site_dir: html
-theme: readthedocs
+theme: mkdocs
+theme_dir: doc/custom_theme
 # extra_css: ["https://fiware.org/style/fiware_readthedocs.css"]
 pages:
-    - Home: index.md
+    - Architecture: index.md
     - Client API: client_api.md
     - Server API: server_api.md
