--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/lynckia/licode
 site_description: Open Source WebRTC Communications Platform
 docs_dir: doc
 theme_dir: doc/custom_theme
-extra_css: ['css/style.css']
+extra_css: ['css/style.css', 'css/architecture.css']
 pages:
     - Architecture: index.md
     - Client API: client_api.md
