--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_url: http://licode.readthedocs.org
 repo_url: https://github.com/lynckia/licode
 site_description: Open Source WebRTC Communications Platform
 docs_dir: doc
-theme: mkdocs
 theme_dir: doc/custom_theme
+extra_css: ['css/style.css', 'css/architecture.css']
 pages:
     - Architecture: index.md
     - Client API: client_api.md
