--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -50,7 +50,9 @@ log4j.logger.rtp.RtpVP8SlideShowHandler=ERROR
 log4j.logger.rtp.RtpAudioMuteHandler=ERROR
 log4j.logger.rtp.RtpSink=ERROR
 log4j.logger.rtp.RtpSource=ERROR
-log4j.logger.rtp.RRGenerationHandler=ERROR
+log4j.logger.rtp.RtcpFeedbackGenerationHandler=DEBUG
+log4j.logger.rtp.RtcpRrGenerator=DEBUG
+log4j.logger.rtp.RtcpNackGenerator=DEBUG
 log4j.logger.rtp.SRPacketHandler=ERROR
 log4j.logger.rtp.SenderBandwidthEstimationHandler=ERROR
 log4j.logger.rtp.StatsCalculator=ERROR
