--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -50,8 +50,8 @@ log4j.logger.rtp.RtpVP8SlideShowHandler=ERROR
 log4j.logger.rtp.RtpAudioMuteHandler=ERROR
 log4j.logger.rtp.RtpSink=ERROR
 log4j.logger.rtp.RtpSource=ERROR
-log4j.logger.rtp.RtcpFeedbackGenerationHandler=WARN
-log4j.logger.rtp.RtcpRrGenerator=WARN
+log4j.logger.rtp.RtcpFeedbackGenerationHandler=ERROR
+log4j.logger.rtp.RtcpRrGenerator=ERROR
 log4j.logger.rtp.RtcpNackGenerator=ERROR
 log4j.logger.rtp.SRPacketHandler=ERROR
 log4j.logger.rtp.SenderBandwidthEstimationHandler=ERROR
