--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -51,8 +51,8 @@ log4j.logger.rtp.RtpAudioMuteHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
 log4j.logger.rtp.RtcpFeedbackGenerationHandler=WARN
-log4j.logger.rtp.RtcpRrGenerator=WARN
-log4j.logger.rtp.RtcpNackGenerator=WARN
+log4j.logger.rtp.RtcpRrGenerator=DEBUG
+log4j.logger.rtp.RtcpNackGenerator=DEBUG
 log4j.logger.rtp.SRPacketHandler=WARN
 log4j.logger.rtp.BandwidthEstimationHandler=WARN
 log4j.logger.rtp.SenderBandwidthEstimationHandler=WARN
