Base on 16.04 the Dockerfile

--- a/extras/docker/Dockerfile
+++ b/extras/docker/Dockerfile
@@ -4,6 +4,10 @@ MAINTAINER Lynckia
 
 WORKDIR /opt
 
+# ffmpeg dependencies for
+RUN echo "deb http://us.archive.ubuntu.com/ubuntu trusty main multiverse" | tee -a /etc/apt/sources.list
+
+
 # Download latest version of the code and install dependencies
 RUN  apt-get update && apt-get install -y git wget && \
   git clone https://github.com/fanchuanster/licode.git
@@ -11,8 +15,9 @@ RUN  apt-get update && apt-get install -y git wget && \
 WORKDIR /opt/licode
 
 # Install Licode components
-RUN  ./scripts/installUbuntuDeps.sh --cleanup && \
-  ./scripts/installErizo.sh && \
+RUN  git pull && ./scripts/installUbuntuDeps.sh --cleanup
+
+RUN  git pull && ./scripts/installErizo.sh && \
 	./scripts/installNuve.sh && \
 	./scripts/installBasicExample.sh
 
