Add/nack generation (#780)

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -50,7 +50,9 @@ log4j.logger.rtp.RtpVP8SlideShowHandler=WARN
 log4j.logger.rtp.RtpAudioMuteHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
-log4j.logger.rtp.RRGenerationHandler=WARN
+log4j.logger.rtp.RtcpFeedbackGenerationHandler=WARN
+log4j.logger.rtp.RtcpRrGenerator=WARN
+log4j.logger.rtp.RtcpNackGenerator=WARN
 log4j.logger.rtp.SRPacketHandler=WARN
 log4j.logger.rtp.BandwidthEstimationHandler=WARN
 log4j.logger.rtp.SenderBandwidthEstimationHandler=WARN
