--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -46,7 +46,7 @@ log4j.logger.rtp.RtpPacketQueue=WARN
 log4j.logger.rtp.RtpRetransmissionHandler=WARN
 log4j.logger.rtp.RtpVP8Fragmenter=WARN
 log4j.logger.rtp.RtpVP8Parser=ERROR
-log4j.logger.rtp.RtpVP8SlideShowHandler=WARN
+log4j.logger.rtp.RtpSlideShowHandler=WARN
 log4j.logger.rtp.RtpAudioMuteHandler=WARN
 log4j.logger.rtp.RtpSink=WARN
 log4j.logger.rtp.RtpSource=WARN
@@ -58,3 +58,4 @@ log4j.logger.rtp.BandwidthEstimationHandler=WARN
 log4j.logger.rtp.SenderBandwidthEstimationHandler=WARN
 log4j.logger.rtp.StatsCalculator=WARN
 log4j.logger.rtp.LayerDetectorHandler=WARN
+log4j.logger.rtp.PliPacerHandler=WARN
