QualityManager wont try to switch to a removed layer anymore

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -16,7 +16,7 @@ log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
 log4j.logger.SrtpChannel=WARN
 log4j.logger.Stats=WARN
-log4j.logger.WebRtcConnection=DEBUG
+log4j.logger.WebRtcConnection=INFO
 
 log4j.logger.dtls.DtlsSocket=WARN
 log4j.logger.dtls.DtlsFactory=WARN
@@ -38,6 +38,8 @@ log4j.logger.media.codecs.AudioDecoder=WARN
 log4j.logger.media.mixers.VideoMixer=WARN
 log4j.logger.media.mixers.VideoUtils=WARN
 
+
+log4j.logger.rtp.QualityManager=DEBUG
 log4j.logger.rtp.RtcpAggregator=WARN
 log4j.logger.rtp.RtcpForwarder=WARN
 log4j.logger.rtp.RtpExtensionProcessor=WARN
