--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -39,7 +39,7 @@ log4j.logger.media.mixers.VideoMixer=WARN
 log4j.logger.media.mixers.VideoUtils=WARN
 
 
-log4j.logger.rtp.QualityManager=DEBUG
+log4j.logger.rtp.QualityManager=WARN
 log4j.logger.rtp.RtcpAggregator=WARN
 log4j.logger.rtp.RtcpForwarder=WARN
 log4j.logger.rtp.RtpExtensionProcessor=WARN
