--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -56,3 +56,4 @@ log4j.logger.rtp.RtcpNackGenerator=ERROR
 log4j.logger.rtp.SRPacketHandler=ERROR
 log4j.logger.rtp.SenderBandwidthEstimationHandler=ERROR
 log4j.logger.rtp.StatsCalculator=ERROR
+log4j.logger.rtp.RtpPaddingGeneratorHandler=ERROR
