--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -16,7 +16,7 @@ log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
 log4j.logger.SrtpChannel=WARN
 log4j.logger.Stats=WARN
-log4j.logger.WebRtcConnection=INFO
+log4j.logger.WebRtcConnection=DEBUG
 
 log4j.logger.dtls.DtlsSocket=WARN
 log4j.logger.dtls.DtlsFactory=WARN
