Added gulpfile and updated scripts

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ build/
 licode_config.js
 extras/basic_example/node_modules
 extras/basic_example/public/erizo.js
+extras/basic_example/public/erizo.js.map
 extras/basic_example/nuve.js
 node_modules/
 site
