--- a/spine/spineClientsConfig.json
+++ b/spine/spineClientsConfig.json
@@ -1,5 +1,5 @@
 {
-  "basicExampleUrl": "http://localhost:3001/",
+  "basicExampleUrl": "https://localhost/",
   "publishConfig" : {
     "_video":{"file":"file:///YOUR_LICODE_COMPATIBLE_TEST_FILE"},
     "video":{"synthetic":{"audioBitrate": 30000,
